kube/media/jellyfin/network.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-lan
  namespace: media
  annotations:
    metallb.io/loadBalancerIPs: "192.168.1.224"
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: jellyfin
  ports:
  - port: 8096
    name: http-tcp
    protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: jellyfin
  namespace: media
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  selector:
    app.kubernetes.io/name: jellyfin
  ports:
  - port: 8096
    name: http-tcp
    protocol: TCP
  - port: 8920
    name: https-tcp
    protocol: TCP
  - port: 1900
    name: dlna-udp
    protocol: UDP
  - port: 7359
    name: discovery-udp
    protocol: UDP
  type: ClusterIP
  sessionAffinity: ClientIP # multipod deployments: route traffic to the same pod based on ip address
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: media
  labels:
    app.kubernetes.io/name: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  ingressClassName: nginx-external
  tls:
  - hosts:
    - jellyfin.matthew-stratton.me
    secretName: jellyfin-tls
  rules:
  - host: jellyfin.matthew-stratton.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              name: http-tcp
